# dtipipe

./: .gitignore  README.md  TODO.md  conftest.py  pyproject.toml
src/dtipipe/: __init__.py  activate_tensors.py  apply_antsRegistrationSyNMI.py  bet_mask.py  bse.py  eddy_pnl.py  fs2dwi.py  nifti2nhdr.py  ukf.py  ukf_tract_querier.py  util.py
src/dtipipe/measuretracts/: __init__.py  measureTractsFunctions.py
src/dtipipe/pipeline/: BaseTask.py  DwiBetMask.py  DwiEddy.py  DwiNifti.py  __init__.py
src/dtipipe/pipeline/dickerson/: DwiBetMask.py  DwiEddy.py  InputFreesurferRecon.py  WmparcInDwi.py  __init__.py
src/dtipipe/pipeline/dtk/: Dti.py  Tracks.py  __init__.py
src/dtipipe/pipeline/standard_pnl/: BaseTask.py  CaminoDti.py  DwiBetMask.py  DwiEddy.py  DwiNifti.py  TractMeasures.py  TractQuerier.py  Ukf.py  UkfTracts.py  WmparcInDwi.py  __init__.py
src/dtipipe/tasks/: DicomDir.py  DwiBetMask.py  DwiEddy.py  DwiNifti.py  __init__.py
tests/: test_dtipipe.py
