[tool.poetry]
name = "dtipipe"
version = "0.1.0"
description = ""
authors = ["Ryan Eckbo <ryan.eckbo@mgh.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
plumbum = "^1.6"
pandas = "^0.25.2"
toolz = "^0.10.0"
luigi = "^2.8"
coloredlogs = "^10.0"
nibabel = "^2.5"
tract_querier = {git = "https://github.com/demianw/tract_querier.git"}
vtk = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
yapf = "^0.28.0"
ipython = "^7.9"
flake8 = "^3.7"

[tool.poetry.scripts]
bse = "dtipipe:bse.Cli.run"
eddy_pnl = "dtipipe:eddy_pnl.Cli.run"
bet_mask = "dtipipe:bet_mask.Cli.run"
apply_antsRegistrationSyNMI = "dtipipe:apply_antsRegistrationSyNMI.Cli.run"
fs2dwi = "dtipipe:fs2dwi.Cli.run"
nifti2nhdr = "dtipipe:nifti2nhdr.Cli.run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

