[tool.poetry]
name = "dtipipe"
version = "0.1.0"
description = ""
authors = ["Ryan Eckbo <ryan.eckbo@mgh.harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"
plumbum = "*"
pandas = "*"
toolz = "*"
luigi = "*"
coloredlogs = "*"
nibabel = "*"
vtk = "*"
tract_querier = {git = "https://github.com/demianw/tract_querier.git"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
yapf = "^0.28.0"
ipython = "^7.9"
flake8 = "^3.7"

[tool.poetry.scripts]
bse = "dtipipe:bse.Cli.run"
eddy_pnl = "dtipipe:eddy_pnl.Cli.run"
bet_mask = "dtipipe:bet_mask.Cli.run"
apply_antsRegistrationSyNMI = "dtipipe:apply_antsRegistrationSyNMI.Cli.run"
fs2dwi = "dtipipe:fs2dwi.Cli.run"
nifti2nhdr = "dtipipe:nifti2nhdr.Cli.run"
ukf = "dtipipe:ukf.Cli.run"
ukf_tract_querier = "dtipipe:ukf_tract_querier.Cli.run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

